# agent-core

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
agent_core/: __init__.py  agent.py  anthropic_provider.py  base.py  claude.py  env.py  errors.py  instructions.py  openai_provider.py  session_map.py
tests/: test_agent.py  test_claude_agent.py  test_claude_agent_integration.py  test_factory.py  test_session_map.py
